Sat Mar 10 07:57:16 2001  George Lebl <jirka@5z.com>

	* floating-widget.c: apply patch from Brian Warner <warner@lothar.com>
	  to fix hide size.

Thu Mar 08 2001 Yukihiro Nakai <ynakai@redhat.com>

	* Add Japanese help translation from Yusuke NOGUCHI.

Wed Mar 07 2001 John Fleck <jfleck@inkstain.net>

	* updating bug referece to bugzilla.gnome.org in all the docs"
	help/C/panel.sgml, it/panel.sgml, de/panel.sgml and no/panel.sgml
	
Wed Mar 07 01:21:52 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, panel-util.[ch], menu.c, applet.c: make a general url
	  checking function and when a docpath is a full url, just display
	  it.

	* basep-widget.c, foobar-widget.c: warning fixes

Wed Mar 07 00:45:42 2001  George Lebl <jirka@5z.com>

	* main.c, menu.c, panel.[ch]:  kill orphan drawers, fixes crashes
	  later on

	* basep-widget.c: play the expand sound on autoshow

Tue Mar 06 23:02:53 2001  George Lebl <jirka@5z.com>

	* panel.c: when a directory is dropped and it's not a menu make
	  a launcher that opens a new filemanager window (whatever the
	  filemanager happens to be)

Tue Mar 06 22:33:01 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c: when we get a configure event
	  and it ain't what we like we go back to where we belong.  Prevents
	  things from moving us.

Tue Mar 06 18:56:43 2001  George Lebl <jirka@5z.com>

	* launcher.c: correctly translate "%c" and %c in the kde command line
	  perhaps this code should be smarter

Tue Mar 06 18:39:05 2001  George Lebl <jirka@5z.com>

	* panel-util.c: support KDE documentation for the launcher and
	  menu help thingies. So we can read KDE's DocPath thingies.

Tue Mar 06 16:20:26 2001  George Lebl <jirka@5z.com>

	* launcher.[ch], menu.c, applet.c, gnome-panel-properties.desktop,
	  panel-utils.c:  Understand the DocPath field.  Now we can start
	  using it in other .desktops.  Still doesn't understand the kde
	  paths, though that should not be hard if we can guess the KDE
	  documentation path.
