@@ -1089,8 +1089,10 @@ foobar_widget_size_allocate (GtkWidget *w, GtkAllocation *alloc)
 	if (GTK_WIDGET_CLASS (parent_class)->size_allocate)
 		GTK_WIDGET_CLASS (parent_class)->size_allocate (w, alloc);
 
-	if (GTK_WIDGET_REALIZED (w))
+	if (GTK_WIDGET_REALIZED (w)) {
 		g_slist_foreach (panel_list, queue_panel_resize, NULL);
+		basep_border_queue_recalc ();
+	}
 }
 
 GtkWidget *
