@@ -1,3 +1,12 @@
+Sun Mar 11 16:33:44 2001  George Lebl <jirka@5z.com>
+
+	* basep-widget.c, xstuff.[ch], main.c, session.c: when recalcing
+	  borders, call xstuff to set up a property on the root window about
+	  a rectengular area that's ok for usage by things like nautilus
+	  icons.
+
+	* foobar-widget.c: queue recalc on size_allocate
+
 Sat Mar 10 07:57:16 2001  George Lebl <jirka@5z.com>
 
 	* floating-widget.c: apply patch from Brian Warner <warner@lothar.com>
